# xdwayland

./: .gitignore  README.md  meson.build  meson_options.txt
include/: xdwayland-client.h  xdwayland-collections.h  xdwayland-core.h  xdwayland-types.h
private/: xdwayland-private.h
src/: xdwayland-client.c  xdwayland-collections.c  xdwayland-core.c  xdwayland-error.c  xdwayland-scanner.py  xdwayland-utils.c
